# ai-quantum-cryptanalysis

./: .env.example  .gitignore  AGENT.md  CITATION.cff  HANDOFF_2026-05-29.md  HANDOFF_2026-05-30.md  HANDOFF_2026-06-01.md  LICENSE  README.md  brief.md  pyproject.toml  requirements.txt  run_experiment.py
docs/: 22bit_attack_plan.md  PROJECT_TIMELINE.md  blog_phase1_announcement_ja.md  deepening_findings_2026-05-25.md  executive_summary.md  honest_framing_preprint_outline.md  lattice_hnp_design.md  phase1_readiness.md  short_announcement_posts.md  wordpress_project_aqua_v2.html  wordpress_project_aqua_v2.md  wordpress_project_aqua_v2_block.html  wordpress_project_aqua_v2_publish.html  wordpress_publishing_guide.md
results/: _ibm_19bit_t12_counts.json  _ibm_19bit_t14_counts.json  _ibm_22bit_t12_counts.json  _ibm_4bit_counts.json  boundary_scan_2026-05-27.json  experiment_15bit_4096shots.json  experiment_15bit_8192shots.json  experiment_20bit_4096shots.json  grover_2bit_tiny_4096shots.json  grover_3bit_4096shots.json  grover_3bit_tiny_4096shots.json  grover_4bit_4096shots.json  min_shot_curve_2026-05-28.txt  quantinuum_compile_2026-05-28.txt  quantinuum_cost_real_rates_2026-05-29.txt  quantinuum_h2_noise_sim_phase1_2026-05-28.txt  shor_19bit_t12_20000shots_ibm.json  shor_19bit_t12_step1_analysis.md  shor_19bit_t14_5000shots_ibm.json  shor_19bit_t14_step2_analysis.md  shor_22bit_t12_35000shots_ibm.json  shor_22bit_t12_analysis.md  shor_4bit_2048shots_sim.json  shor_4bit_4096shots_ibm.json  shor_4bit_4096shots_ibm_m3.json  shor_4bit_t6_1024shots_hnp_ibm.json  (+17 more)
src/: ecc.py  (+9 more)
(+53 files in other folders)
